# bingbingo

./: .editorconfig  .gitignore  Cargo.toml  README.md  ]  api-test.sh  flake.nix  index.html  push.sh  styles.css
public/: bingbingo  card.css  card.js  code.js  index.html  page404.html  styles.css
public/host/: code.js  index.html  styles.css
src/: main.rs
test/: api-test.sh  card-simple.json  card-with-image.json
