[package]
name = "bingbingo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "*", features = ["fs"] }
serde = { version = "*", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
mime = { version = "*" }
mime_guess = { version = "*" }

